# videoPlayer

./: .gitattributes  CMakeLists.txt  README.md  demuxing_example.c  test.cpp
dependency/GLFW/lib/: glfw3.lib
dependency/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
dependency/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
dependency/include/fdk-aac/: aacenc_lib.h
dependency/lib/: fdk-aac.lib  libx264.dll.lib  libx264.lib
dependency/lib/pkgconfig/: fdk-aac.pc  x264.pc
glad/: glad.c  glad.h  khrplatform.h
src/: clock.cc  clock.h  clock_win32.cc  demux.c  demux.h  main_clock.h  main_clock_win32.c  test.cpp  time_base.h
src/audio/: audio.h  audio_common.h  audio_device.h  audio_device_win32.c  audio_device_win32.cc  audio_mix.cc  audio_mix.h  audio_resampler.c  audio_resampler.cc  audio_resampler.h  test.cpp
src/base/: atomic.h  atomic_gcc_amd64_sup.h  atomic_msvc_sup.h  atomic_type.h  circular_buf.h  list.h  logger.c  logger.h  memory_pool.h  rbtree.c  rbtree.h  utils.h
src/core/: context.h  core.h  demux.h  demux_lavf.c  logger.c  logger.h  stream.h
src/event/: event.h  event_handle.h  event_handle_win32.c
src/gl/: gl_debug.hpp  gl_element_array.cpp  gl_element_array.hpp  gl_element_attribute.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture2D.cpp  gl_texture2D.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  gl_vertex_buff.cpp  gl_vertex_buff.hpp
src/gl/glsl_shader/: point_light.glsl  rgb_img.glsl  sea.glsl  seascape.glsl  video.glsl
src/video/: test.cpp  video.h  video_codec.c  video_codec.cc  video_codec.h  video_common.h  video_renderer.cc  video_renderer.h
